Fix ui bugs
change footer position to absolute because it was not showing on mobile devices, and correct an order error on setDefaultUi function.

--- a/style.css
+++ b/style.css
@@ -1,20 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Pixelify+Sans&family=Roboto+Mono&display=swap');
 
-
-
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow: hidden;
     color: rgba(255, 255, 255, 0.893);
+    overflow: hidden;
 }
 
 body {
     font-family: roboto, sans-serif;
-    display: flex;
     flex-direction: column;
     height: 100vh;
+    display: flex;
 }
 
 header {
@@ -37,6 +35,10 @@ main {
     justify-content: center;
     align-items: center;
     display: flex;
+}
+
+.container {
+    margin-bottom: 70px;
 }
 
 
@@ -95,6 +97,10 @@ footer {
     padding: 20px;
     background-color: rgb(99, 42, 42);
     font-weight: bold;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 footer a{
@@ -114,6 +120,16 @@ footer a{
     }
 
     footer {
-        padding: 10px;
+        padding: 20px;
+        font-weight: 400;
+
+    }
+
+    .container {
+        margin-bottom: 130px;
+    }
+
+    .score div {
+        margin: 0 10px;
     }
 }
